--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "typescript": "^2.3.0-dev.20170225"
   },
   "scripts": {
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "postinstall": "node scripts/generate-type-definitions.js dependency-index.d.ts"
   }
 }
