--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@types/jasmine": "^2.5.43",
     "@types/node": "^7.0.5",
     "jasmine": "^2.5.3",
+    "rxjs": "^5.2.0",
     "typescript": "^2.3.0-dev.20170225"
   },
   "scripts": {
