--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "dependency-index",
+  "version": "0.0.1",
   "devDependencies": {
     "@types/jasmine": "^2.5.43",
     "@types/node": "^7.0.5",
     "jasmine": "^2.5.3",
     "rxjs": "^5.2.0",
-    "typescript": "^2.3.0-dev.20170225"
+    "typescript": "^2.2.1"
   },
   "scripts": {
     "watch": "tsc -w",
